--- a/diplom-app/.gitlab-ci.yml
+++ b/diplom-app/.gitlab-ci.yml
@@ -1,11 +1,16 @@
 workflow:
   rules:
-    - if: $CI_COMMIT_REF_NAME == "master" || $CI_COMMIT_REF_NAME == "main"
+    - if: $CI_COMMIT_TAG
       variables:
-        NAMESPACE: "master"
-        PROJECT: "diplom-app"
-        KUBE_ID: "cat8unatmc0t289fm8d1"
+        TAG_IMAGE: $CI_COMMIT_TAG
+    - if: $CI_COMMIT_REF_NAME
+      variables:
+        TAG_IMAGE: latest
 
+variables:
+  NAMESPACE: "master"
+  PROJECT: "diplom-app"
+  KUBE_ID: "catrtshlqb3aaepuarmh"
 build:
   stage: build
   image: docker:20-dind
@@ -15,21 +20,22 @@ build:
     DOCKER_TLS_CERTDIR: ""
   script:
     - docker login -u $DOCKER_USER -p $DOCKER_PASS
-    - docker build -t alexgavaz/diplom-app:latest .
-    - docker push alexgavaz/diplom-app:latest
+    - docker build -t alexgavaz/diplom-app:$TAG_IMAGE .
+    - docker push alexgavaz/diplom-app:$TAG_IMAGE
 
 .deploy_template:
   stage: deploy
   image: registry.apptimizm.pro/templates/image/alpine:3-13
   tags: [services]
   before_script:
-    - apk update && apk add curl bash
+    - apk update && apk add curl bash gettext
     - curl -LO https://storage.googleapis.com/kubernetes-release/release/v1.18.0/bin/linux/amd64/kubectl
     - chmod +x ./kubectl && mv ./kubectl /usr/local/bin/kubectl
     - curl https://storage.yandexcloud.net/yandexcloud-yc/install.sh | bash
     - cat $YC_CONFIG > ~/.config/yandex-cloud/config.yaml
 
   script:
+    - envsubst < ./.deployment.yaml > deployment.yaml
     - /root/yandex-cloud/bin/yc managed-kubernetes cluster get-credentials --id $KUBE_ID --external
     - kubectl create namespace $NAMESPACE || true
     - kubectl delete secret git-docker-registry -n $NAMESPACE || true
